[gd_scene load_steps=13 format=3 uid="uid://ce68r0f4hwbit"]

[ext_resource type="Script" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="1_hecmk"]
[ext_resource type="Script" path="res://scenes/image_file_selector_script.gd" id="1_j0uju"]
[ext_resource type="Script" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="2_03jnl"]
[ext_resource type="Texture2D" uid="uid://vypb46ut3fil" path="res://icons/x_icon.svg" id="2_fbpga"]
[ext_resource type="Script" path="res://scripts/card_shuffle_container.gd" id="3_16o2v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c7ryp"]

[sub_resource type="Gradient" id="Gradient_ua7cw"]
offsets = PackedFloat32Array(0, 0.05, 0.95, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.784314, 0, 0, 0, 0.784314, 0, 0, 0, 0)
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jn2pv"]
gradient = SubResource("Gradient_ua7cw")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ypm85"]
texture = SubResource("GradientTexture2D_jn2pv")

[sub_resource type="Resource" id="Resource_6kbpa"]
script = ExtResource("2_03jnl")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_5jkwx"]
script = ExtResource("2_03jnl")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_82kmc"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.282241, 0.359911, 0.444902, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="ImageFileSelector" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_c7ryp")
script = ExtResource("1_j0uju")
section_out_time = 0.5
card_fade_time = 0.4

[node name="DimLight" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
color = Color(0, 0, 0, 0.27451)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
icon = ExtResource("2_fbpga")
icon_alignment = 1
expand_icon = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ypm85")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 40

[node name="SmoothScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 3
script = ExtResource("1_hecmk")
wheel_scroll_damper = SubResource("Resource_6kbpa")
dragging_scroll_damper = SubResource("Resource_5jkwx")
drag_with_mouse = false
drag_with_touch = false
allow_vertical_scroll = false
allow_overdragging = false

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/PanelContainer/MarginContainer/SmoothScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="Container" parent="VBoxContainer/PanelContainer/MarginContainer/SmoothScrollContainer/CenterContainer"]
layout_mode = 2
script = ExtResource("3_16o2v")
position_delay = 0.8
fade_in_enter = true
animate_limit = 10
focus_scale = 1.0
focus_time = 0.25
drop_time = 1.25

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SearchPanel" type="PanelContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_82kmc")

[node name="SearchLnEdt" type="LineEdit" parent="VBoxContainer/CenterContainer/SearchPanel"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
placeholder_text = "Search Card"
alignment = 1
